team member fix on small screens

--- a/less/style.less
+++ b/less/style.less
@@ -354,7 +354,7 @@ section {
 /* --- Trade Directory --- */
 .team-member {
   height: 150px;
-  padding-right: 10px;
+  padding: 0 10px;
   background: @white;
 
   h4 {
@@ -382,4 +382,21 @@ section {
   .rounded(50%);
   background-size: cover;
   background-position: center center;
+}
+@media screen and (max-width: 768px) {
+  .team-member em {
+    font-size: 0.8em;
+  }
+  .team-member-image {
+    width: 80px;
+    height: 80px;
+    margin: 0 20px 10px 10px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .team-member-image {
+    width: 50px;
+    height: 50px;
+    margin: 0 10px 10px 0;
+  }
 }
